Adds user_id to tasks with corresponding functionality to retrieve tasks by user_id
